# cse144-final-project

./: .gitignore  Dockerfile  README.md  environment.yml  inference.py  inference_entry.py  pyproject.toml  train.py
configs/: smoke_test.yaml
configs/efficientnet/: classifier_only.yml  default.yaml  partial_backbone_finetune.yml
outputs/: submission.csv
src/: dataset.py  inference.py  model.py  train.py
src/cse144_final_project/: config.py  dataset.py  experiment.py  inference.py  model.py  train.py  transforms.py  utils.py
