[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cse144-final-project"
version = "0.1.0"
description = "UCSC CSE144 transfer learning project"
requires-python = ">=3.10,<3.11"

dependencies = [
    "matplotlib",
    "tqdm",
    "scikit-learn",
    "pydantic==2.13.4",
    "PyYAML==6.0.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]